Stylesheet/emote/tag updates 2014-12-15

--- a/source-css/braeburnquisition.css
+++ b/source-css/braeburnquisition.css
@@ -47,14 +47,7 @@ a[href|="/flutterburn"] {
     background-image:url(%%flutterburn%%)
 }
 
-a[href|="/braeburneyes"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 185px;
-    height: 150px;
-    background-image:url(%%braeburneyes%%)
-}
+
 
 a[href|="/hellosexy"] {
     display: block;
@@ -150,23 +143,7 @@ a[href|="/gayburn"] {
     background-image:url(%%Braestylesheet%%)
 }
 
-a[href|="/snailburn"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 195px;
-    height: 144px;
-    background-image:url(%%snailburn%%)
-}
 
-a[href|="/switchedroles"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 185px;
-    height: 175px;
-    background-image:url(%%switchedroles%%)
-}
 
 a[href|="/crystals"] {
     display: block;
@@ -186,14 +163,7 @@ a[href|="/evilmilkshake"] {
     background-image:url(%%evilmilkshake%%)
 }
 
-a[href|="/braetavia"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 182px;
-    height: 150px;
-    background-image:url(%%braetavia%%)
-}
+
 a[href|="/hithere"] {
     display: block;
     clear: none;
@@ -1622,7 +1592,15 @@ a[href|="/lyrabonkitties"] {
  background-image: url(%%Lyrabonkitties%%);
  
 }
-
+a[href|="/kawaiishy"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 190px;
+ height: 240px;
+ background-image: url(%%drawing-in-rikose-style1-by-luminaura-d86k9y6%%);
+ 
+}
 div.titlebox span.word {display:none; }
 div.titlebox span.number:after {content:" Sexy Beasts";}
 
