--- a/source-css/maudpie.css
+++ b/source-css/maudpie.css
@@ -506,6 +506,12 @@ a[href|="/maudconfused"],a[href|="/mpconfused"]
 a[href|="/rmaudconfused"],a[href|="/rmpconfused"]
 {display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%maud-sheet%%)!important; background-position: -100% -500%;}
 
+a[href|="/maudseriously"],a[href|="/yougottabekiddingme"],a[href|="/mpseriously"]
+{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%maud-sheet%%)!important; background-position: -200% -400%;}
+
+a[href|="/rmaudseriously"],a[href|="/ryougottabekiddingme"],a[href|="/rmpseriously"]
+{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%maud-sheet%%)!important; background-position: -200% -500%;}
+
 a[href|="/maudheart"]
 {display:block;clear:none;float:left;width:131px;height:200px;background-image:url(%%maudpieheart%%)!important; background-position: 0 0;}
 
@@ -600,6 +606,9 @@ a[href|="/maudsmeel"],a[href|="/mpsmeel"]
 a[href|="/maudflip"]
 {display:block;clear:none;float:left;width:232px;height:145px;background-image:url(%%medium%%)!important; background-position: -479px -300px;}
 
+a[href|="/maudbellyrubs"],a[href|="/mpbellyrubs"]
+{display:block;clear:none;float:left;width:151px;height:150px;background-image:url(%%medium%%)!important; background-position: 0 -450px;}
+
 a[href|="/princessmaud"],a[href|="/princessmp"],a[href|="/maudicorn"]
 {display:block;clear:none;float:left;width:242px;height:180px;background-image:url(%%princessmp%%)!important; background-position: 0 0;}
 
@@ -633,7 +642,7 @@ a[href|="/maudpoker"]
 a[href|="/maudshrug"]
 {display:block;clear:none;float:left;width:80px;height:80px;background-image:url(%%maudshrug%%)!important; background-position: 0 0;}
 
-a[href|="/princessboulder"],a[href|="/alicornboulder"]
+a[href|="/princessboulder"],a[href|="/alicornboulder"],a[href|="/bouldercorn"]
 {display:block;clear:none;float:left;width:80px;height:80px;background-image:url(%%maudshrug%%)!important; background-position: -80px 0;}
 
 a[href|="/maudexcited"],a[href|="/mpexcited"] {
