--- a/source-css/mlplounge.css
+++ b/source-css/mlplounge.css
@@ -164,7 +164,7 @@ div.over18 .entry .buttons .first{padding-left: 0px}
  text-align:center;
  height:500px;
  width:100%;
- background-image:url(%%xmas-tree-10%%);
+ background-image:url(%%xmas-tree-14%%);
  background-repeat:no-repeat;
  margin-bottom:-25px;
  background-position: bottom center;
@@ -319,7 +319,7 @@ visibility: hidden;
 /*Sidebar Filly end*/
 
 
-body{background:url(%%twilightbackground%%) no-repeat fixed center center}
+body{background: #ffffff url(%%twilightbackground%%) no-repeat fixed center center}
 .content .md h1{color:#789922;border-bottom:none;padding-bottom:0px}
 .content .md h1:before{content:">"}
 
