--- a/source-css/ponymotes.css
+++ b/source-css/ponymotes.css
@@ -34,10 +34,10 @@ margin-top: -1px;
 margin-bottom: -3px;
 }
 
-/* Snowflake banner 
+/* Snowflake banner */
 #header { 
 background: url(%%snowflake-banner%%) 0 18px repeat-x #CEE3F8;
-} */
+}
 
 /* Banner stuff.
 #header {
