--- a/source-css/berrytrain.css
+++ b/source-css/berrytrain.css
@@ -1,5 +1,3 @@
-
-
 /*testest*/
 
 .side .titlebox h6 {position:fixed;z-index:1000;bottom:-270px;right:350px;display:block;width:240px;height:286px;padding:0;background:transparent url(%%dolphin%%) no-repeat top left;font-size:0;text-indent:-9999px;overflow:hidden; transition: bottom 1s;}
@@ -98,7 +96,7 @@ a[href|="/filly"]
 /*End filly code*/
 
 
-#header {
+ #header {
 	border: 0px;
 	border-bottom: 0px;
 	position: static;
@@ -121,9 +119,7 @@ a[href|="/filly"]
 {
 0%   {background-position: 0px;}
 100% {background-position: -2491px;}
-}
-
-
+}  
 
 
 .author[href$="/Moon-Phase"]:after {content: ' of all things lasers ';}
@@ -144,7 +140,7 @@ a[href|="/filly"]
 /*End of [REDACTED]*/
 
 /* HEADER */
-#header { background: url(%%up%%); }
+ #header { background: url(%%up%%); } 
 
 /* BACKGROUND */
 body { background: url(%%4waffleLite%%)
@@ -692,7 +688,7 @@ a[href="/intensifies"]:after {
 
 /*---*/
 
-.content .midcol,.content .commentarea .comment {overflow:visible !important;}
+/* .content .midcol,.content .commentarea .comment {overflow:visible !important;}
 
 .arrow.upmod{
   animation: upMoon ease 1.5s;
@@ -720,7 +716,7 @@ a[href="/intensifies"]:after {
   88% { -webkit-transform:translate(0,-140px); opacity:0; }
   94% { -webkit-transform:translate(0,14px); opacity:0;}
   100% { -webkit-transform:translate(0,0); opacity:1; }
-}
+} */
 
 /*---*/
 
@@ -784,3 +780,22 @@ a[href="/intensifies2"]:after {
 }
 
 /*ERGRHGTBTRGBFGBF*/
+
+
+
+
+
+
+
+
+
+
+#header-bottom-left{
+background-color:transparent;
+background-image:url(%%2%%),url(%%1%%),url(%%3%%),url(%%4%%),url(%%5%%);
+-webkit-animation:snow 20s linear infinite;
+-moz-animation:snow 20s linear infinite;
+-ms-animation:snow 20s linear infinite;
+animation:snow 20s linear infinite
+}
+@-webkit-keyframes snow{0%{background-position:0 0,0 0,0 0}100%{background-position:500px 1000px,400px 400px,300px 300px}}@-moz-keyframes snow{0%{background-position:0 0,0 0,0 0}100%{background-position:500px 1000px,400px 400px,300px 300px}}@-ms-keyframes snow{0%{background-position:0 0,0 0,0 0}100%{background-position:500px 1000px,400px 400px,300px 300px}}@keyframes snow{0%{background-position:0 0,0 0,0 0}100%{background-position:500px 1000px,400px 400px,300px 300px}}
