--- a/source-css/mlplounge.css
+++ b/source-css/mlplounge.css
@@ -164,7 +164,7 @@ div.over18 .entry .buttons .first{padding-left: 0px}
  text-align:center;
  height:500px;
  width:100%;
- background-image:url(%%xmas-tree-14%%);
+ background-image:url(%%xmas-tree-21%%);
  background-repeat:no-repeat;
  margin-bottom:-25px;
  background-position: bottom center;
@@ -1183,7 +1183,7 @@ a[href|="/ripferrbearand20"] {
  height: 70px;
  content: " ";
  position: relative;
- top: 70px;
+ top: 75px;
  right: 70px;
  background:url(%%xmas-filly-table%%)
 }
@@ -1402,6 +1402,9 @@ a.author[href$="HeWho_MustNotBeNamed"]:before {font-size:10px!important; visibil
 
 a.author[href$="DaylightDarkle"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
 a.author[href$="DaylightDarkle"]:before {font-size:10px!important; visibility:visible!important; content: "Day1ightDark1e"}
+
+a.author[href$="LunarWolves"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
+a.author[href$="LunarWolves"]:before {font-size:12px!important; visibility:visible!important; content: "Evil Robot SantaWolves"}
 
 a.author[href$="Peacefulzealot"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
 a.author[href$="Peacefulzealot"]:before {font-size:10px!important; visibility:visible!important; content: "CenturyZellyBelly"}
