--- a/source-css/mlploungesteamgroup.css
+++ b/source-css/mlploungesteamgroup.css
@@ -360,7 +360,8 @@ a.author[href$="Dundrioundio"],
 a.author[href$="Dwarflord"],
 a.author[href$="KommandantSprakle"],
 a.author[href$="scix"],
-a.author[href$="sna_fu_bar"]
+a.author[href$="sna_fu_bar"],
+a.author[href$="TheJBW"]
 
 { 
     font-size:0!important; 
@@ -382,7 +383,8 @@ a.author[href$="Draze"]:before,
 a.author[href$="TheCommieDuck"]:before,
 a.author[href$="KommandantSprakle"]:before,
 a.author[href$="scix"],
-a.author[href$="sna_fu_bar"]:before
+a.author[href$="sna_fu_bar"]:before,
+a.author[href$="TheJBW"]:before
 
 {
     font-size:10px!important; 
@@ -401,6 +403,7 @@ a.author[href$="Dwarflord"]:before {content: "Cinor"}
 a.author[href$="scix"]:before {content: "Hi"}
 a.author[href$="TheCommieDuck"]:before {content: "Flutterslut"}
 a.author[href$="thepostaldud3"]:before {content: "steev"}
+a.author[href$="TheJBW"]:before {content: "So?"}
 
 
 /*Names for extra text go here */
