--- a/source-css/thebestpony.css
+++ b/source-css/thebestpony.css
@@ -179,6 +179,9 @@ html:lang(nv) .side p a[href="http://nv.reddit.com/r/TheBestPony/"] {
 .flair-ar {
     background-position: 0px -176px
     }
+.flair-bron {
+    background-position: 0px -192px
+    }
 /*********
 *usernames*
 *********/
