--- a/source-css/cloudchasermotes.css
+++ b/source-css/cloudchasermotes.css
@@ -896,6 +896,14 @@ background-repeat:no-repeat;
 background-image:url(%%ccinabox%%);
 }
 
+a[href|="/lucinanom"] {
+float:left;
+width:250px;
+height:221px;
+background-repeat:no-repeat;
+background-image:url(%%LucinaNom%%);
+}
+
 a[href|="/chaserdance"] {
 float:left;
 width:70px;
