--- a/source-css/colgateinquisition.css
+++ b/source-css/colgateinquisition.css
@@ -340,11 +340,89 @@ a[href^="/colgateayyy"] {
 
 /* colgateohyou */
 a[href^="/colgateohyou"] {
-background-position: -150px -0px;
+background-position: -150px 0px;
 display: block;
 clear: none;
 float: left;
 width: 181px;
+height: 150px;
+background-image: url(%%colgatespreadsheet2%%)
+}
+
+/* colgatewhy */
+a[href^="/colgatewhy"] {
+background-position: -375px 0px;
+display: block;
+clear: none;
+float: left;
+width: 95px;
+height: 150px;
+background-image: url(%%colgatespreadsheet2%%)
+}
+
+
+/* colgatenoidea */
+a[href^="/colgatenoidea"] {
+background-position: -525px 0px;
+display: block;
+clear: none;
+float: left;
+width: 150px;
+height: 150px;
+background-image: url(%%colgatespreadsheet2%%)
+}
+
+/* colgateglee */
+a[href^="/colgateglee"] {
+background-position: -675px 0px;
+display: block;
+clear: none;
+float: left;
+width: 150px;
+height: 150px;
+background-image: url(%%colgatespreadsheet2%%)
+}
+
+/* colgateunsure */
+a[href^="/colgateunsure"] {
+background-position: -825px 0px;
+display: block;
+clear: none;
+float: left;
+width: 188px;
+height: 150px;
+background-image: url(%%colgatespreadsheet2%%)
+}
+
+/* colgatesurgery */
+a[href^="/colgatesurgery"] {
+background-position: -1050px 0px;
+display: block;
+clear: none;
+float: left;
+width: 99px;
+height: 150px;
+background-image: url(%%colgatespreadsheet2%%)
+}
+
+/* colgatekawaii */
+a[href^="/colgatekawaii"] {
+background-position: -1200px 0px;
+display: block;
+clear: none;
+float: left;
+width: 122px;
+height: 150px;
+background-image: url(%%colgatespreadsheet2%%)
+}
+
+/* hello random child */
+a[href^="/hellorandomchild"] {
+background-position: -1350px 0px;
+display: block;
+clear: none;
+float: left;
+width: 150px;
 height: 150px;
 background-image: url(%%colgatespreadsheet2%%)
 }
