--- a/source-css/mylittledurian.css
+++ b/source-css/mylittledurian.css
@@ -244,7 +244,7 @@ border:none;
 }
 */
 
-
+/*
 .side a[href="http://www.reddit.com/r/sweetie_belle"] {
     position:fixed;
     top:190px;
@@ -259,3 +259,4 @@ border:none;
     line-height:70%;
     text-align:right;
 }
+*/
