--- a/source-css/ponymotes.css
+++ b/source-css/ponymotes.css
@@ -528,7 +528,7 @@ a[href|="/zecoraspooky"], a[href|="/zecorabored"], a[href|="/zecoramagicdust"], 
 {background-image:url(%%misfitsj%%);display:block;float:left;}
 
 /* Misfits k */
-a[href|="/cadscience"], a[href|="/appul"], a[href|="/sadprincesshorse"], a[href|="/humaud"], a[href|="/cutemena"], a[href|="/hipstercad"], a[href|="/pinkiebreak"], a[href|="/fluttertree"], a[href|="/abbowling"], a[href|="/sword"], a[href|="/lutece"], a[href|="/GLaDOS"], a[href|="/glados"], a[href|="/doublesweets"], a[href|="/colgatecute"], a[href|="/crystalzecora"], a[href|="/scootascoots"], a[href|="/sheetiebelle"], a[href|="/sillylyra"], a[href|="/seatiebelt"], a[href|="/topgummi"], a[href|="/dewpony"]
+a[href|="/cadscience"], a[href|="/appul"], a[href|="/sadprincesshorse"], a[href|="/humaud"], a[href|="/cutemena"], a[href|="/hipstercad"], a[href|="/pinkiebreak"], a[href|="/fluttertree"], a[href|="/abbowling"], a[href|="/sword"], a[href|="/lutece"], a[href|="/GLaDOS"], a[href|="/glados"], a[href|="/doublesweets"], a[href|="/colgatecute"], a[href|="/crystalzecora"], a[href|="/scootascoots"], a[href|="/sheetiebelle"], a[href|="/sillylyra"], a[href|="/seatiebelt"], a[href|="/topgummi"], a[href|="/dewpony"], a[href|="/chrysalick"], a[href|="/queenpoker"]
 {background-image:url(%%misfitsk%%);display:block;float:left;}
 
 /*
@@ -1205,3 +1205,5 @@ a[href|="/sillylyra"] {width:115px;height:149px;background-position: -377px -467
 a[href|="/seatiebelt"] {width:133px;height:150px;background-position: -556px -417px;}
 a[href|="/topgummi"] {width:69px;height:120px;background-position: -614px -146px;}
 a[href|="/dewpony"] {width:137px;height:175px;background-position: -563px -567px;}
+a[href|="/chrysalick"] {width:97px;height:150px;background-position: -466px -599px;}
+a[href|="/queenpoker"] {width:119px;height:150px;background-position: -215px -591px;}
